Add MELE-specific game enum

--- a/FluentNexus/FluentNexus.csproj
+++ b/FluentNexus/FluentNexus.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <!-- Target frameworks: netstandard1.3 and net45 are the minimum supported (except net45 doesn't support RuntimeInformation until net471); netstandard2.0 is preferred for minimal FluentHttpClient dependencies. -->
-    <TargetFrameworks>netstandard1.3;netstandard2.0;net45;net471</TargetFrameworks>
+    <TargetFrameworks>net6.0</TargetFrameworks>
     <AssemblyName>FluentNexus</AssemblyName>
     <RootNamespace>Pathoschild.FluentNexus</RootNamespace>
     <PackageId>Pathoschild.FluentNexus</PackageId>
